--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.10",
-    "@mui/material": "^5.15.10",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.6.7",
     "bootstrap": "^5.2.3",
+    "express": "^4.18.3",
     "photoswipe": "^5.3.4",
     "react": "^18.2.0",
     "react-accessible-accordion": "^3.3.5",
@@ -45,6 +48,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "dev": "concurrently \"npm run start\" \"node src/server.js\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -67,5 +71,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
