--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "bootstrap": "^5.2.3",
     "photoswipe": "^5.3.4",
     "react": "^18.2.0",
@@ -58,6 +59,11 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
   },
   "browserslist": {
     "production": [
